[gd_scene load_steps=5 format=3 uid="uid://n13rjnm4q0o"]

[ext_resource type="Script" uid="uid://xco4ld0knxn5" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://clr41wdofryfe" path="res://icon.svg" id="2_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(64, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(95, 88)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 65
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qhqgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("RectangleShape2D_qhqgy")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="Sprite2D2" type="Sprite2D" parent="."]

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
